Fix z-index

--- a/web/bundles/dodicifansworldweb/less/own-plugins/toolbar.less
+++ b/web/bundles/dodicifansworldweb/less/own-plugins/toolbar.less
@@ -26,6 +26,7 @@ nav.leftmenubar{
     }
     
     ul > li img {
+        z-index: 0;
         opacity: 0.7;
 
         @media (max-width: 480px) {
@@ -248,6 +249,7 @@ body[data-user-is-logged="false"]{
     position: absolute;
     margin-left: 23px;
     margin-top: 2px;
+    z-index: 1;
 }
 
 .toolbar-icon {
